Changed LABSearchFailFastOdometer buildOdometer to use null for digits where fieldValue was null